--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,1 @@
-<div id="map-canvas" data-latitude="<%= @event.latitude %>" data-longitude="<%= @event.longitude %>"></div>
-
+<div id="map-canvas" data-address="<%= @event.address %>"></div>
