--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,47 @@
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 </head>
 <body>
+  <div class="container-fluid">
+      <!-- Navbar -->
+   <nav class="navbar navbar-inverse">
+      <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-3">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">BuzzFree</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="navbar-collapse-3">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Blah</a></li>
+              <li><a href="/users">Blah</a></li>
+              <% if user_signed_in?%>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag(current_user.image, class: "img-circle", alt: "maridlcrmn", width: "20") %> <%= current_user.name %></a>
+                  </a>
+                </li>
+                <li>
+                   <%= link_to "Logout", destroy_user_session_path, class: "btn btn-default btn-outline btn-circle", method: :delete %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "Login", user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-outline btn-circle" %>
+                </li>
+              <% end %>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+  </div>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+
   <%= yield %>
 
 </body>
