--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,27 @@
 
 
 
-
+<div class="row">
+  <div class="col-md-3 col-sm-12 col-xs-12">
+    <div class="panel panel-primary text-center no-boder bg-color-green green">
+      <div class="panel-left pull-left green">
+          <i class="fa fa-users fa-5x"></i>
+      </div>
+      <div class="panel-right pull-right">
+        <h3>8,457</h3>
+        <strong> Daily Visits</strong>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-body easypiechart-panel">
+        <h4>Customers</h4>
+        <div class="easypiechart" id="easypiechart-blue" data-percent="82" ><span class="percent">82%</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div><!--/.row-->
