hardcoded chicago ip address for testing

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,5 @@
-
-
-
+<p><%= @location.ll %></p>
+<div id="map-canvas" data-address="<%= @event.address %>" data-latitude="<%= @location.latitude %>" data-longitude="<%= @location.longitude %>"></div>
 
 <div class="row">
   <div class="col-md-3 col-sm-12 col-xs-12">
@@ -25,4 +24,4 @@
       </div>
     </div>
   </div>
-</div><!--/.row-->
+</div><!--/.row -->
