--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,12 @@
 <p><%= @location.ll %></p>
+<%= @events.each do |event| %>
+<p><%= event.title %></p><hr>
+<p><%= event.lat %></p>
+<p><%= event.lng %></p><hr>
+<% end %>
+
+
+
 <div id="map-canvas" data-address="<%= @event.address %>" data-latitude="<%= @location.latitude %>" data-longitude="<%= @location.longitude %>"></div>
 
 <div class="row">
