minor styling stuff

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,8 +6,8 @@
 
 <!-- event div -->
 <% @events.each do |event| %>
-    <div class="panel panel-primary text-center no-border bg-color-green green">
-      <div class="panel-left pull-left green">
+    <div class="panel panel-primary text-center no-border bg-color-red red">
+      <div class="panel-left pull-left red">
           <i class="fa fa-users fa-5x"></i>
       </div>
       <div class="panel-right pull-right">
