--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<div id="map-canvas" data-locations="<%= @locations %>" data-latitude="<%= @location.latitude %>" data-longitude="<%= @location.longitude %>"></div>
-<p><%= "user lat/lng: #{@location.ll}" %></p>
+<div id="map-canvas" data-locations="<%= @locations %>" data-latitude="<%= @user_location.latitude %>" data-longitude="<%= @user_location.longitude %>"></div>
+<p><%= "user lat/lng coords: #{@user_location.ll}" %></p>
 
 <div class="row">
   <div class="col-md-3 col-sm-12 col-xs-12">
