--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -82,6 +82,7 @@ border-radius: 50px;
 display:inline-block;
 margin-bottom:30px;
 width:100%;
+height: 300px;
 }
 .green {
 background-color: #5cb85c;
