--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse-3">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Blah</a></li>
-              <li><a href="/users">Blah</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="/users">Users</a></li>
               <% if user_signed_in?%>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag(current_user.image, class: "img-circle", alt: "maridlcrmn", width: "20") %> <%= current_user.name %></a>
