--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse-3">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Events</a></li>
+              <li><a href="#">List</a></li>
               <li><a href="/users">Users</a></li>
               <% if user_signed_in?%>
                 <li class="dropdown">
@@ -57,6 +57,22 @@
   <% end %>
 
   <%= yield %>
-
 </body>
+<div class="container-fluid">
+ <nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="collapse navbar-collapse" id="navbar-collapse-3">
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Recovery</a></li>
+            <li><a href="/users">Health and Fitness</a></li>
+            <li><a href="/users">Careers</a></li>
+          </ul>
+
+        </div>
+    </div>
+  </nav>
+</div>
 </html>
