--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,15 @@
             <a class="navbar-brand" href="#">BuzzFree</a>
           </div>
 
+          <div class="nav navbar-nav">
+            <form class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search" />
+              <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-search"></span></button>
+              </div>
+            </form>
+          </div>
+
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse-3">
             <ul class="nav navbar-nav navbar-right">
