basic jumbotron for events

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,3 +16,10 @@
 <% end %>
 </div>
 
+<div class="jumbotron">' +
+<h2> +locations[i][2]+ </h2> +
+<h3> +locations[i][6]+ </h3> +
+<h4> Guests. <span> +locations[i][5]+ / +locations[i][4]+ </span></h4><hr> +
+<p> +locations[i][3]+ </p> +
+<p><a class="btn btn-primary btn-lg" href="#" role="button">Join Event</a></p> +
+</div>'
