event button added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="map-canvas" data-locations="<%= @locations %>" data-latitude="<%= @user_location.latitude %>" data-longitude="<%= @user_location.longitude %>"></div>
 <p><%= "user lat/lng coords: #{@user_location.ll}" %></p>
-<div class="col-sm-12">
-  <button type="button" class="btn btn-success col-sm-4" id="create-event-button">Create Event</button>
+<div class="c">
+  <button type="button" class="btn btn-success center-block" id="create-event-button">Create Event</button>
 </div>
 <div class="row">
   <% @events.each do |event| %>
