--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div id="map-canvas" data-locations="<%= @locations %>" data-latitude="<%= @user_location.latitude %>" data-longitude="<%= @user_location.longitude %>"></div>
-<div class="c">
-  <button type="button" class="btn btn-success center-block" id="create-event-button">Create Event</button>
+<div>
+  <button type="button" class="btn btn-success center-block" id="create-event-button" data-toggle="modal" data-target="#event-form">Create Event</button>
 </div>
 <div class="row">
   <% @events.each do |event| %>
@@ -16,6 +16,4 @@
 <% end %>
 </div>
 
-
-
-
+<%= render "events/form" %>
