--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <% @events.each do |event| %>
   <div class="col-md-3 col-sm-12 col-xs-12">
-    <div class="jumbotron">
+    <div class="jumbotron2">
       <h2> <%= event.title %> </h2>
       <h3> <%= event.address %> </h3>
       <h4> Guests. <span> <%= event.num_people_attending %> / <%= event.max_people %> </span></h4><hr>
