--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
 #map-canvas{
-  height: 40em;
+  height: 45em;
   width: 97%;
   margin-right: auto;
   margin-left: auto;
@@ -10,3 +10,6 @@
   width: auto;
 }
 
+.col-sm-3 {
+  padding-top: 5em;
+}
