changing the event controller

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,7 +6,7 @@
         <h4 class="modal-title" id="myModalLabel">Create Event</h4>
       </div>
       <div class="modal-body">
-        <%= form_for :event, class: "form-horizontal" do |f| %>
+        <%= form_for @event, class: "form-horizontal" do |f| %>
           <!-- <fieldset> -->
           <!-- Form Name -->
           <legend>Users name might go here...</legend>
