search works.  in the middle of changing the styling and css positioning

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -5,14 +5,15 @@
 
 .jumbotron2 {
   background:#fff;
-  border-width: 1px;
-  border-radius: 5px;
   padding: 10px;
-  border-style: solid;
-  border-color: black;
+  border-bottom: 1px solid black;
 }
 
 .jumbotron h4 span{
+  color: #bebebe;
+}
+
+.jumbotron2 h4 span{
   color: #bebebe;
 }
 
