--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,8 +1,18 @@
 #map-canvas{
   height: 45em;
-  width: 97%;
-  margin-right: auto;
-  margin-left: auto;
+  width: 45%;
+  /*margin-right: 2em;*/
+  float: right;
+  position: absolute-fixed;
+  top: 0;
+  right: 2em;
+}
+
+#list-canvas {
+  height: 45em;
+  width: 45%;
+  margin-left: 2em;
+  float: left;
 }
 
 .event_image{
@@ -14,6 +24,14 @@
   padding-top: 5em;
 }
 
-.searcher{
+.search_form{
   padding-top: 0.75em;
 }
+
+#search_button{
+  background-color: rgba(104, 83, 151, 1);
+  color: white;
+  border: 0px;
+  margin-left: 1em;
+}
+
