--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,18 +21,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Buzz Free</a>
+            <a class="navbar-brand" href="/">Buzz Free</a>
           </div>
 
           <div class="nav navbar-nav">
-            <div class="searcher">
-            <%= form_tag events_path, method: :get do %>
+            <!-- <div class="searcher"> -->
+            <%= form_tag events_path, method: :get, class: "search_form" do %>
               <p>
                 <%= text_field_tag :query, params[:query] %>
-                <%= submit_tag "Search", name: nil %>
+                <%= submit_tag "Search", name: nil, class: "btn btn-default", id: "search_button" %>
               </p>
             <% end  %>
-            </div>
+            <!-- </div> -->
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
