--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,16 @@
-<% if @search_results.length > 0 %>
-  <% @search_results.each do |event| %>
-    <strong><%= event.title %></strong>
-    <p>description: "<%= event.description %>"</p>
-    <p>location: <%= event.address %></p>
-    <hr><hr>
+<div id="map-canvas" data-locations="<%= @locations %>" data-latitude="<%= @user_location.latitude %>" data-longitude="<%= @user_location.longitude %>">
+</div>
+
+<div id="list-canvas">
+  <% @events.each do |event| %>
+  <div class="jumbotron2">
+    <h2><%= event.title %></h2>
+    <h3><%= event.address %></h3>
+    <h4> Guests. <span><%= event.num_people_attending %> / <%= event.max_people %> </span></h4><hr>
+    <p><%= event.description %></p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Join Event</a></p>
+  </div>
   <% end %>
-<% else %>
-    <h2>Sorry. Your search returned no results.</h2>
-<% end %>
+</div>
+
+<%= render "events/form" %>
