--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,7 +3,6 @@
   width: 45%;
   /*margin-right: 2em;*/
   float: right;
-  position: absolute-fixed;
   top: 0;
   right: 2em;
 }
@@ -13,6 +12,7 @@
   width: 45%;
   margin-left: 2em;
   float: left;
+  overflow-y: auto;
 }
 
 .event_image{
@@ -25,13 +25,20 @@
 }
 
 .search_form{
-  padding-top: 0.75em;
+  margin-right: 3em;
 }
 
 #search_button{
   background-color: rgba(104, 83, 151, 1);
   color: white;
   border: 0px;
+  /*padding: 0.1em;*/
   margin-left: 1em;
+}
+
+footer{
+  position: relative;
+  bottom: 0;
+  color: red;
 }
 
