minor styling. added footer

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,9 +1,7 @@
 #map-canvas{
   height: 45em;
   width: 45%;
-  /*margin-right: 2em;*/
   float: right;
-  top: 0;
   right: 2em;
 }
 
@@ -11,8 +9,9 @@
   height: 45em;
   width: 45%;
   margin-left: 2em;
+  /*border: 1px solid #bebebe;*/
   float: left;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .event_image{
@@ -36,9 +35,19 @@
   margin-left: 1em;
 }
 
-footer{
-  position: relative;
+#footer {
+  position: fixed;
   bottom: 0;
-  color: red;
+  width: 100%;
+  height: 5em;
+  text-align: right;
+  background: #fff;
 }
+
+#footer p{
+  font-size: 0.8em;
+  color: #bebebe;
+  margin-right: 2em;
+}
+
 
