--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -34,6 +34,7 @@
 
 @media screen and (max-width: 980px ) {
     #map-canvas{ height: 0px; }
+    #footer{ height: 0px; }
     #list-canvas{ width: 95%; margin-left: auto; margin-right: auto; padding-left: 2em; }
 
     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
