--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,3 +14,11 @@
 </div>
 
 <%= render "events/form" %>
+
+<div id="footer">
+  <div clas="col-lg-12">
+  <hr>
+    <p>Copyright &copy; Buzz Free Social 2015</p>
+  </div>
+</div>
+
