--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Buzz Free</a>
+            <a class="navbar-brand" href="/">Buzz Free Social</a>
           </div>
 
           <div class="nav navbar-nav">
@@ -82,6 +82,7 @@
   <% end %>
 
   <%= yield %>
+
 </body>
 
 </html>
