--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,9 +8,11 @@
     <h3><%= event.address %></h3>
     <h4> Guests. <span><%= event.num_people_attending %> / <%= event.max_people %> </span></h4><hr>
     <p><%= event.description %></p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Join Event</a></p>
+    <p><%= button_tag "Join Event", class: "btn btn-primary btn-lg", id: "event-show-button", "data-toggle"=> "modal", "data-target" => "#event-show", "data-event" => event.to_json %></p>
   </div>
   <% end %>
 </div>
 
+
 <%= render "events/form" %>
+<%= render "events/show" %>
