--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     <h2><%= event.title %></h2>
     <h3><%= event.address %></h3>
     <h4> Guests. <span><%= event.num_people_attending %> / <%= event.max_people %> </span></h4><hr>
-    <p><%= event.description %></p>
+    <p><%= sanitize(truncate(event.description, length: 75)) %></p>
     <p><%= button_tag "Join Event", class: "btn btn-primary btn-lg", id: "event-show-button", "data-toggle"=> "modal", "data-target" => "#event-show", "data-event" => event.to_json %></p>
   </div>
   <% end %>
