event link working

--- a/app/views/events/_show.html.erb
+++ b/app/views/events/_show.html.erb
@@ -11,8 +11,10 @@
           <h3 class="show-event-address"></h3>
           <h4> Guests. <span>People attending </span></h4><hr>
           <p>event description</p>
-          <p>link to join event </p>
+          <p><a href="#" id="show-event-link" class="btn btn-primary btn-lg" >Join This Shit</a></p>
         </div>
     </div>
   </div>
 </div>
+
+<!-- link_to("Join Event", join_event_event_path(event), class: "btn btn-primary btn-lg", :id => "event-show-button", "data-toggle" => "modal", "data-target" => "#event-show", "data-whatever" => event) -->
