--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,15 +13,15 @@
   <% end %>
 </div>
 
-
-
-<%= render "events/form" %>
-<%= render "events/show" %>
-
 <div id="footer">
-  <div clas="col-lg-12">
+  <div class="col-lg-12">
   <hr>
     <p>Copyright &copy; Buzz Free Social 2015</p>
   </div>
 </div>
+
+<%= render "events/form" %>
+<%= render "events/show" %>
+
+
 
