--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -37,6 +37,7 @@
     #footer{ height: 0px; }
     #list-canvas{ width: 95%; margin-left: auto; margin-right: auto; padding-left: 2em; }
     #query{ width: 100%; margin-left: 1.5em; }
+    #create-event-button{ width: 95%; }
 
     .navbar .navbar-collapse .navbar-right > li:last-child { padding-left: 15px; padding-right: 15px; }
 
