--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -35,7 +35,7 @@
 @media screen and (max-width: 980px ) {
     #map-canvas{ height: 0px; }
     #footer{ height: 0px; }
-    #list-canvas{ width: 95%; margin-left: auto; margin-right: auto; padding-left: 2em; }
+    #list-canvas{ width: 95%; margin-left: auto; margin-right: auto; padding-left: 2em; overflow-y: none; }
     #query{ width: 100%; margin-left: 1.5em; }
     #create-event-button{ width: 95%; }
 
