create event working

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -34,9 +34,9 @@
           </div>
 
           <div class="control-group">
-            <%= f.label :max_num_people, "Number of People", class: "control-label" %>
+            <%= f.label :max_people, "Number of People", class: "control-label" %>
             <div class="input-group spinner">
-              <%= f.text_field :max_num_people, value: 1, class: "form-control" %>
+              <%= f.text_field :max_people, value: 1, class: "form-control" %>
               <div class="input-group-btn-vertical">
                 <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
                 <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
