images added to event cards

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -27,3 +27,25 @@
   color: firebrick;
 }
 
+.info-and-img{
+  padding-bottom: 0.5em;
+}
+
+#creator_image{
+  float: right;
+  margin-bottom: 1em;
+}
+
+#creator_image p{
+  font-size: 0.7em;
+}
+
+#creator_image p span{
+  color: forestgreen;
+}
+
+@media screen and (max-width: 980px ) {
+  #creator_image { display: none; }
+}
+
+
