--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,5 +27,11 @@
     </div>
   <% end %>
 </div>
+<div id="footer">
+  <div class="col-lg-12">
+    <hr>
+    <p>Copyright &copy; Buzz Free Social 2015</p>
+  </div>
+</div>
 
 <%= render "events/form" %>
