refactored event card partial stuff

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,31 +2,9 @@
 </div>
 
 <div id="list-canvas">
-  <% @events.each do |event| %>
-  <div class="jumbotron2">
-      <div class='info-and-img'>
-      <div id='creator_image'>
-        <%= image_tag(event.creator.image, class: "img", alt: "maridlcrmn", width: "130", height: "130") %>
-        <p>Creator: <span><%= event.creator.name %></span></p>
-      </div>
-        <div class='event_info'>
-          <h4><%= event.title %></h4>
-          <h4><span><%= event.date %></span></h4>
-          <h5><%= event.address %></h5>
-          <h6> Start Time: <span><%= event.start_time %></span> </h6>
-          <h6> End Time: <span><%= event.end_time %></span> </h6>
-          <h6> Guests. <span><%= event.num_people_attending %> / <%= event.max_people %> </span></h6>
-        </div>
-      </div>
-      <hr>
-      <div class='jumbotron-footer'>
-        <p>Description:</p>
-        <p><%= event.description %></p>
-        <p><a class="btn btn-primary btn-sm" href="#" role="button">Join Event</a></p>
-      </div>
-    </div>
-  <% end %>
+  <%= render @events %>
 </div>
+
 <div id="footer">
   <div class="col-lg-12">
     <hr>
