added event#show links to search and main pages

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -5,7 +5,7 @@
       <p>Creator: <span><%= event.creator.name %></span></p>
     </div>
     <div class='event_info'>
-      <h4><%= event.title %></h4>
+      <h4><%= link_to event.title, event_path(event)%></h4>
       <h4><span><%= event.date %></span></h4>
       <h5><%= event.address %></h5>
       <h6> Start Time: <span><%= event.start_time %></span> </h6>
